[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/fonts/PixelMplus12-Regular.tres" type="DynamicFont" id=1]
[ext_resource path="res://gui/pressed_stylebox.tres" type="StyleBox" id=2]
[ext_resource path="res://gui/disabled_stylebox.tres" type="StyleBox" id=3]
[ext_resource path="res://gui/default_stylebox.tres" type="StyleBox" id=4]
[ext_resource path="res://gui/hovered_stylebox.tres" type="StyleBox" id=5]
[ext_resource path="res://gui/pause_menu/pause_menu.gd" type="Script" id=6]

[node name="PauseMenu" type="VBoxContainer"]
pause_mode = 2
margin_left = 432.0
margin_top = 251.0
margin_right = 592.0
margin_bottom = 349.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 6 )

[node name="Continue" type="Button" parent="."]
margin_right = 160.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Continue"

[node name="BackToTitle" type="Button" parent="."]
margin_top = 34.0
margin_right = 160.0
margin_bottom = 64.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Save & Back to Title"

[node name="SaveAndQuit" type="Button" parent="."]
margin_top = 68.0
margin_right = 160.0
margin_bottom = 98.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Save & Quit"

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="BackToTitle" to="." method="_on_BackToTitle_pressed"]
[connection signal="pressed" from="SaveAndQuit" to="." method="_on_SaveAndQuit_pressed"]
